<resources>
    <string name="app_name">2048 Multiplayer</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="play_guest">Play as Guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create new account</string>
    <string name="register">Sign Up</string>
    <string name="hello_label">"Hello {username}!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="single_player">Single player</string>
    <string name="multi_player">Multi player</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
</resources>
